# quickcheck-functions

./: CHANGELOG.md  flake.nix  quickcheck-functions.cabal
src/: Intro.hs
test/: Main.hs
